--- a/treatmenteffects/sections/2_data.tex
+++ b/treatmenteffects/sections/2_data.tex
@@ -2,12 +2,9 @@ We combine the datasets from ABC and CARE. Table~\ref{tab:abc-care-characteristi
 
 Both interventions involved intensive center-based care for subjects in the treatment group starting at 8 weeks and continuing until age 5 before the children started kindergarten. Treatment-group subjects also received daily health screenings and diapers and formula until 6 months. Control-group families received the diapers and formula as well for the same period of time.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.}  After school entrance until age 8, there was an additional component of treatment in which home visitors worked with children and their parents to tutor the children and to encourage families to be involved in the children's academics.\footnote{In ABC, treatment status of this component was randomized. In CARE, all the subjects who received center-based care also received this school-age component.} We do not consider this part of the treatment because it extends beyond early childhood and it was not found to have significant treatment effects.\footnote{\citet{Campbell_Ramey_etal_2002_ADS}.} 
 
-The pedagogical approach focused on language, cognitive, social-emotional, and executive functioning skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined.\footnote{\citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} ABC and CARE subjects engaged with this in addition to other curricula that emphasized child-led learning of language skills.\footnote{\citet{Conti_etal_2016_LongTermHealth}.}
+The pedagogical approach focused on language, cognitive, social-emotional, and executive functioning skills. During ABC and CARE, the \textit{Learning Games} curriculum was developed and refined.\footnote{\citet{Sparling_Lewis_1979_BOOKLearninggamesFirstThree}.} ABC and CARE subjects engaged with this in addition to other curricula that emphasized child-led learning of skills important for future learning.\footnote{\citet{Conti_etal_2016_LongTermHealth}.}
 
-CARE included an additional arm of treatment. In addition to the services listed above, those in the treatment group received home visiting from birth to age 5. This home visiting consisted of biweekly visits focusing on parental problem solving skills. There was an additional experimental group that received this home visiting component, but not the center-based care.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} We do not include this last group in our analysis due to few treatment effects from just the home visiting component. We also use this lack of treatment effects to justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component.\footnote{This merging of ABC and CARE is similarly justified in \citet{Garcia_etal_2016_Comp_CBA_Unpublished}.}
-
-The control groups of both ABC and CARE had alternative preschool options. Documentation indicates that although these options were of lower quality than the center-based treatment, they were well-attended with about 75\% of the ABC/CARE control-group subjects were enrolled in these alternative preschools.\footnote{\citet{Burchinal_etal_1989_CD_Daycare-Pre-K-Dev,Garcia_etal_2016_Comp_CBA_Unpublished}.}
-
+CARE included an additional arm of treatment. In addition to the services listed above, those in the treatment group received home visiting from birth to age 5. This home visiting consisted of biweekly visits focusing on parental problem solving skills. There was an additional experimental group that received this home visiting component, but not the center-based care.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} We do not include this last group in our analysis due to few treatment effects from just the home visiting component. We also use this lack of treatment effects to justify merging the treatment groups of ABC and CARE, even though that of CARE received the additional home-visiting component.\footnote{\citet{ABCCARE_Dataset}.}
 
 \begin{table}[H]
 \centering
@@ -21,37 +18,6 @@ The control groups of both ABC and CARE had alternative preschool options. Docum
 \end{tablenotes}
 \end{threeparttable}
 \end{table}
-
-\subsection{Randomization Protocol and Compromises} \label{section:randomization}
-
-Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Randomization pairing was based on a risk index, maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} ABC collected an initial sample of 121 subjects. We characterize each missing observation in Appendix~\ref{appendix:background}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard methods, described in Appendix~\ref{app:method_partialobs}. We conduct the same analysis for the CARE sample. 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced and are primarily related to the health of the child and mobility of families and not to dissatisfaction with the program.\footnote{The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization.}
-
-\subsection{Control Group Substitution}
-
-In ABC/CARE, many control group members (but no children from families offered treatment) attended alternative (to home) childcare or preschool centers.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE.
-
-\begin{sidewaysfigure}[!htbp]
-\centering
-\caption{Control Substitution Characteristics, ABC/CARE Control Group}\label{fig:control-sub}
-\begin{subfigure}[h]{0.49\textwidth}
-	\centering
-	\caption{Cumulative Enrollment} \label{fig:treatsubcare}
-	\includegraphics[width=\textwidth]{../output/abccare_controlcontamination.eps}
-\end{subfigure}
-\begin{subfigure}[h]{0.49\textwidth}
-	\centering
-	\caption{Enrollment Dynamics} \label{fig:proportion-alt-pre}
-	\includegraphics[width=\textwidth]{../output/abccare_Vprobs.eps}
-\end{subfigure}%
-\footnotesize \justify
-Note: Panel (a) displays the cumulative distribution function of enrollment in alternatives. Panel (b) displays the fraction of ABC/CARE control-group children enrolled in alternatives, conditional on being enrolled in the previous age (at least one month).\\
-\end{sidewaysfigure}
-
-Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
-
-Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.}
-
-Most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.} They had relatively low quality compared to ABC/CARE.\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
 
 Table~\ref{tab:abccare-baseline} compares pre-program variables between experimental and gender groups. The only significant difference is seen in the HRI score, which is 1.78 points lower for males than for females. This indicates that males were slightly less advantaged at baseline. However, we do not account for multiple hypotheses meaning that with an $\alpha$ level of 10\%, we would expect, on average, one significant result out of ten hypotheses.\footnote{\citet{Romano_Wolf_2005_JASA}.}
 
@@ -90,6 +56,39 @@ Figure~\ref{fig:family-over-time} complements Table~\ref{tab:abccare-baseline} b
 \raggedright
 Note: These plots describe the family and preschool characteristics in the data. The bars in Plot (a) after baseline are conditional on the father being at home at baseline. The bars represent the proportion of father's presence. The bars in Plot (b) represent the mean number of siblings by group.
 \end{figure}
+
+\subsection{Randomization Protocol and Compromises} \label{section:randomization}
+
+Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Randomization pairing was based on a risk index, maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} ABC collected an initial sample of 121 subjects. We characterize each missing observation in Appendix~\ref{appendix:background}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard methods, described in Appendix~\ref{app:method_partialobs}. We conduct the same analysis for the CARE sample. 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced and are primarily related to the health of the child and mobility of families and not to dissatisfaction with the program.\footnote{The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization.}
+
+\subsection{Control Group Substitution}
+
+In ABC/CARE, many control-group subjects (but no treatment-group subjects) attended alternative center-based preschool.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE.
+
+\begin{sidewaysfigure}[!htbp]
+\centering
+\caption{Control Substitution Characteristics, ABC/CARE Control Group}\label{fig:control-sub}
+\begin{subfigure}[h]{0.49\textwidth}
+	\centering
+	\caption{Cumulative Enrollment} \label{fig:treatsubcare}
+	\includegraphics[width=\textwidth]{../output/abccare_controlcontamination.eps}
+\end{subfigure}
+\begin{subfigure}[h]{0.49\textwidth}
+	\centering
+	\caption{Enrollment Dynamics} \label{fig:proportion-alt-pre}
+	\includegraphics[width=\textwidth]{../output/abccare_Vprobs.eps}
+\end{subfigure}%
+\footnotesize \justify
+Note: Panel (a) displays the cumulative distribution function of enrollment in alternatives. Panel (b) displays the fraction of ABC/CARE control-group children enrolled in alternatives, conditional on being enrolled in the previous age (at least one month).\\
+\end{sidewaysfigure}
+
+Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
+
+Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.}
+
+Most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.} They had relatively low quality compared to ABC/CARE.\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
+
+\subsection{Data Collection} \label{section:data-collection}
 
 Data across a wide range of outcomes were collected for ABC and CARE at similar time points. Table~\ref{tab:abc-care-data} summarizes the data collection for both programs. A varied battery of measures of cognitive, social-emotional, and parenting skills were administered during the intervention and while the children were in school. Adult follow-ups are available at ages 21, 30, and 34, with administrative crime records and biomarker health data available at age 34.
 
