paper as sent to heckman

--- a/sections/1_introduction.tex
+++ b/sections/1_introduction.tex
@@ -18,14 +18,14 @@ We can also examine the gender differences in adult outcomes (Figure~\ref{fig:in
 	\centering
 	\caption{Skill Measurements}
 	\label{fig:intro-skills-plots-skills}
-	\includegraphics[width=\textwidth]{../output/abccare-gdiff-skills}
+	\includegraphics[width=\textwidth]{output/abccare-gdiff-skills}
 \end{subfigure}
 
 \begin{subfigure}[h]{0.55\textwidth}
 	\centering
 	\caption{Adult Outcomes}
 	\label{fig:intro-skills-plots-adultsimp}
-	\includegraphics[width=\textwidth]{../output/abccare-gdiff-adultsimp}
+	\includegraphics[width=\textwidth]{output/abccare-gdiff-adultsimp}
 \end{subfigure}
 \footnotesize \justify
 Note: These plots show the means of select variables by gender, pooling across experimental groups. The capped lines show the standard errors and black points indicate that the female is significantly different than the males. These hypothesis tests are two-sided and computed using 100 bootstraps. All factor variables are calculated by principal factor analysis. The factors are then standardized and divided into 30 quantiles. Panel (a) Social-emotional is a factor of task-orientation measured by the Infant Behavioral Record (IBR; \citet{Bayley_1969_BSID-Manual}) at ages 0.5, 1, 1.5 years. Parenting is a factor of the absence of punishment scale of Home Observation for Measurement of the Environment (HOME; \citet{Elardo_Bradley_1981_DR}) between ages 0.5 and 4.5 years. IQ is a factor of full IQ scores measured by the Stanford-Binet Intelligence Scale (SB; \citet{Terman_Merrill_1960_BOOKSBintelligence}), McCarthy Scales of Children's Abilities (MC; \citet{McCarthy_1972_Manual-McCarthy-Scales}), and the Wechsler Preschool and Primary Scale of Intelligence (WPPSI; \citet{Wechsler_1974_Manual-WISC-R}) at ages 2, 3, 4, and 5 years. Achievement is a factor of reading and math scores measured by between the ages of 6 and 12 years. Panel (b) Income is the lifetime net present value of income predicted in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. Education is an indicator of high school graduation by 21 years. Heath is BMI measured at approximately 35 years. Crime is the net present value of projected crime costs as estimated in \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}. All of these adult variables are standardized and split into quantiles to be consistent with the skills.
@@ -48,13 +48,13 @@ We broaden the discussion of results to the full set of outcomes by presenting t
 	\begin{subfigure}[h]{0.7\textwidth}
 		\centering
 		\caption{Treatment vs. Next Best} \label{fig:ppositivenb}
-		\includegraphics[width=\textwidth]{../output/itt_noctrl_all.eps}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all.eps}
 \end{subfigure}
 
 \begin{subfigure}[h]{0.7\textwidth}
 	\centering
 	\caption{Treatment vs. Next Best, Significant at 10\% Level} \label{fig:ppositive10}
-		\includegraphics[width=\textwidth]{../output/itt_noctrl_all_sig10.eps}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all_sig10.eps}
 \end{subfigure}
 \footnotesize \justify
 Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). 
