--- a/sections/6_gender-differences.tex
+++ b/sections/6_gender-differences.tex
@@ -14,13 +14,13 @@ Another explanation for the higher benefit/cost ratio and internal rate of retur
 	\centering
 	\caption{Misdemeanors}
 	\label{fig:crime-misdemeanors}
-	\includegraphics[width=\textwidth]{../output/bar-gender-trt-ad34_mis}
+	\includegraphics[width=\textwidth]{output/bar-gender-trt-ad34_mis}
 \end{subfigure}%
 \begin{subfigure}[h]{0.5\textwidth}
 	\centering
 	\caption{Felonies}
 	\label{fig:crime-felonies}
-	\includegraphics[width=\textwidth]{../output/bar-gender-trt-ad34_fel}
+	\includegraphics[width=\textwidth]{output/bar-gender-trt-ad34_fel}
 \end{subfigure}
 \footnotesize \justify
 Note: These plots show the mean misdemeanors and felonies of the treatment and control group by gender. The capped lines indicate standard errors and the points represent significant differences between treatment and control within each gender. These are estimated using 100 bootstraps. Both of these measures come from the administrative crime data collected when the subjects were approximately age 35. 
@@ -41,13 +41,13 @@ When graphing the density of a factor combining the parenting skills measured at
 		\centering
 		\caption{Parenting Skills, Males}
 		\label{fig:home-male-factor}
-			\includegraphics[width=\textwidth]{../output/HOME-males-factorhome}
+			\includegraphics[width=\textwidth]{output/HOME-males-factorhome}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.49\textwidth}
 		\centering
 		\caption{Parenting Skills, Females}
 		\label{fig:home-female-factor}
-			\includegraphics[width=\textwidth]{../output/HOME-females-factorhome}
+			\includegraphics[width=\textwidth]{output/HOME-females-factorhome}
 	\end{subfigure}
 \end{center}
 \raggedright
@@ -64,26 +64,26 @@ We explore this trend more closely in Figure~\ref{fig:total-home-quantiles}. To 
 		\centering
 		\caption{HOME, Father Absent, Males}
 		\label{fig:home-male-mean}
-			\includegraphics[width=\textwidth]{../output/HOME-male1-fhome0-2quant}
+			\includegraphics[width=\textwidth]{output/HOME-male1-fhome0-2quant}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.49\textwidth}
 		\centering
 		\caption{HOME, Father Absent, Females}
 		\label{fig:home-female-mean}
-			\includegraphics[width=\textwidth]{../output/HOME-male0-fhome0-2quant}
+			\includegraphics[width=\textwidth]{output/HOME-male0-fhome0-2quant}
 	\end{subfigure}
 	
 	\begin{subfigure}[b]{0.49\textwidth}
 		\centering
 		\caption{HOME, Father Present, Males}
 		\label{fig:home-male-factor}
-			\includegraphics[width=\textwidth]{../output/HOME-male1-fhome1-2quant}
+			\includegraphics[width=\textwidth]{output/HOME-male1-fhome1-2quant}
 	\end{subfigure}
 	\begin{subfigure}[b]{0.49\textwidth}
 		\centering
 		\caption{HOME, Father Present, Females}
 		\label{fig:home-female-factor}
-			\includegraphics[width=\textwidth]{../output/HOME-male0-fhome1-2quant}
+			\includegraphics[width=\textwidth]{output/HOME-male0-fhome1-2quant}
 	\end{subfigure}
 \end{center}
 \raggedright \footnotesize
