reorganized repo for treatment effects

--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -32,7 +32,7 @@
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{A.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{A.\arabic{table}}
-\input{Appendices/Background}
+\input{Appendices/Background_treatmenteffects}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{B.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{B.\arabic{table}}
@@ -40,11 +40,11 @@
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{C.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{C.\arabic{table}}
-\input{Appendices/Results}
+\input{Appendices/Results_treatmenteffects}
 
 \setcounter{figure}{0}  \renewcommand{\thefigure}{D.\arabic{figure}}
 \setcounter{table}{0}   \renewcommand{\thetable}{D.\arabic{table}}
-\input{Appendices/VSensitivity}
+\input{Appendices/VSensitivity_treatmenteffects}
 
 \end{appendices}
 
