--- a/abc_treatmenteffects_appendix.tex
+++ b/abc_treatmenteffects_appendix.tex
@@ -2,13 +2,13 @@
 \input{preambleappendix}
 \input{output/mainstatistics}
 
-\externaldocument{treatmenteffects}
+\externaldocument{abc_treatmenteffects_04-27-2017b_jbb}
 
 \pagenumbering{roman}
 \renewcommand\theassumption{AA--\arabic{assumption}}
 
 \begin{document}
-\title{\Large \textbf{Appendix \\ Evaluating a Prototypical Early Childhood Program: \\ Benefits and Gender Differences}}
+\title{\Large \textbf{Appendix \\ Gender Differences in the Benefits of a Prototypical Early Childhood Program}}
 
 \author{Jorge Luis Garc\'{i}a, James J. Heckman, and Anna L. Ziff}
 \date{\today}
@@ -73,4 +73,4 @@
 %\label{app:data}
 %\input{appendices/data}
 
-\end{document}
+\end{document} 
