--- a/sections/0_abstract.tex
+++ b/sections/0_abstract.tex
@@ -1,1 +1,1 @@
-\noindent This paper estimates the long-term benefits from a widely implemented prototypical early childhood program targeting disadvantaged families. The program promoted child development, as well as intergenerational educational attainment and employment. It was evaluated by random assignment and followed participants through their mid-30s. We present treatment effects by gender to clearly present the relationship between gender differences and early childhood education's effect on those differences. In addition to conventional treatment effects, we account for control substitution by considering two counterfactual scenarios: the control-group subjects either stayed at home or attended alternative preschool. We find that males benefit more from treatment in comparison to those who stay at home while females are more resilient to their early environment. We present a complementary aggregate estimate to our companion paper, \citet{Garcia_Heckman_Leaf_etal_2017_Comp_CBA_Unpublished}, that estimates the proportion of total outcomes that are positive (and significant). Although both genders have large proportions, females outperform males. Finally, we reconcile this analysis by concluding that the treatment compensated for early-life deficits that males experience relative to females. This compensation helps the males experience long-lasting benefits of the program into adulthood.
+\noindent This paper estimates gender differences in the long-term benefits of a widely implemented prototypical early childhood program that targeted disadvantaged families. The program promoted different aspects of child development for different genders. There are differences in intergenerational educational attainment and employment. We account for control substitution. Males benefit more from high quality treatment in comparison to those who stay at home in disadvantaged environments. Females are less sensitive to low quality home environments. Although both genders benefit, females outperform males on many dimensions. Finally, we reconcile this analysis by concluding that the treatment compensated for early-life deficits that males experience relative to females. This compensation helps the males experience long-lasting benefits of the program into adulthood. \textbf{[Word Count: 116]} \textbf{[JJH: Both programs contribute -- do we eliminate or increase the male-female gaps by crime?] [JJH: This is confusing -- what is being said? (a) How different are female controls from male controls? (b) Who benefits most in terms of value added?]} 
